<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lia.carrousel.Activities.Register.RegisterDescriptionActivity"
    android:background="@color/grape">

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/prev_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/eggplant"
            android:text="@string/pr_c_dente"
            android:onClick="previous"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/sand"/>

        <Button
            android:id="@+id/next_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/eggplant"
            android:text="@string/suivant"
            android:onClick="suivant"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/sand"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="130dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="261dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/description"
            android:layout_row="0"
            android:layout_column="0"
            android:hint="@string/descriptionPlaceholderParent"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
    </GridLayout>

</RelativeLayout>
