<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aquablue"
        android:orientation="vertical" >

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar">
        </include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:layout_marginLeft="@dimen/feed_item_margin"
            android:layout_marginRight="@dimen/feed_item_margin"
            android:layout_marginTop="@dimen/feed_item_margin"
            android:layout_marginBottom="@dimen/feed_item_margin"
            android:background="@color/aquablue"
            android:orientation="vertical"
            android:paddingBottom="@dimen/feed_item_padding_top_bottom"
            android:paddingTop="@dimen/feed_item_padding_top_bottom" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/username"
                android:textColor="@color/eggplant"
                android:layout_margin="5dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/description"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Numéro de téléphone : "
                android:id="@+id/phoneNumber"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ge"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/years" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sexe"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/gender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/capacit_s_acad_miques"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/academicalCapacities" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Langues parlées : "
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/langueParlees" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:id="@+id/qualites" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/disponibilites"
                android:text="Disponibilités : " />
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        android:background="@color/grape"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>


</android.support.v4.widget.DrawerLayout>
